IGNITE-5712 small test fixes